// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Basic render test 1`] = `
<div
  class="Container"
>
  <table
    class="Table"
  >
    <thead>
      <tr>
        <th>
          Pet name
        </th>
        <th>
          Animal class
        </th>
        <th>
          Age
        </th>
        <th>
          Gender
        </th>
      </tr>
    </thead>
    <tfoot>
      <tr>
        <td
          colspan="4"
        >
          <div
            class="Footer"
          >
            <div
              class="Legend"
            >
              Rows 1 to 7 of 7
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
    <tbody>
      <tr
        class="Odd"
      >
        <td>
          Buddy
        </td>
        <td>
          Dog
        </td>
        <td>
          3
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Molly
        </td>
        <td>
          Cat
        </td>
        <td>
          15
        </td>
        <td>
          female
        </td>
      </tr>
      <tr
        class="Odd"
      >
        <td>
          Bonnie
        </td>
        <td>
          Cat
        </td>
        <td>
          2
        </td>
        <td>
          female
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Coco
        </td>
        <td>
          Parrot
        </td>
        <td>
          22
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class="Odd"
      >
        <td>
          Oscar
        </td>
        <td>
          Dog
        </td>
        <td>
          5
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Max
        </td>
        <td>
          Turtle
        </td>
        <td>
          15
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class="Odd"
      >
        <td>
          Jack
        </td>
        <td>
          Varan
        </td>
        <td>
          1
        </td>
        <td>
          male
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="Container"
  >
    <div
      class="Toolbar"
      style="top:0px"
    >
      <button
        class="Button"
      >
        ⇅
      </button>
      <button
        class="Button"
      >
        csv
      </button>
    </div>
  </div>
</div>
`;

exports[`Table With no data 1`] = `
<div>
  No data specified
</div>
`;

exports[`Table With pagination 1`] = `
<div
  class="Container"
>
  <table
    class="Table"
  >
    <thead>
      <tr>
        <th>
          Pet name
        </th>
        <th>
          Animal class↗
        </th>
        <th>
          Age↗
        </th>
        <th>
          Gender
        </th>
      </tr>
    </thead>
    <tfoot>
      <tr>
        <td
          colspan="4"
        >
          <div
            class="Footer"
          >
            <div
              class="Legend"
            >
              Rows 1 to 2 of 7
            </div>
            <div
              class="Paginator"
            >
              <button
                class="Button"
                disabled=""
              >
                ←
              </button>
              <button
                class="Button"
                disabled=""
              >
                1
              </button>
              <button
                class="Button"
              >
                2
              </button>
              <button
                class="Button"
              >
                3
              </button>
              <button
                class="Button"
              >
                4
              </button>
              <button
                class="Button"
              >
                →
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
    <tbody>
      <tr
        class="Odd"
      >
        <td>
          Bonnie
        </td>
        <td>
          Cat
        </td>
        <td>
          2
        </td>
        <td>
          female
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Molly
        </td>
        <td>
          Cat
        </td>
        <td>
          15
        </td>
        <td>
          female
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="Container"
  >
    <div
      class="Toolbar"
      style="top:0px"
    >
      <button
        class="Button"
      >
        ⇅
      </button>
      <button
        class="Button"
      >
        csv
      </button>
      <button
        class="Button"
      >
        ✽
      </button>
    </div>
  </div>
</div>
`;

exports[`Table With sorting 1`] = `
<div
  class="Container"
>
  <table
    class="Table"
  >
    <thead>
      <tr>
        <th>
          Pet name
        </th>
        <th>
          Animal class↗
        </th>
        <th>
          Age↗
        </th>
        <th>
          Gender
        </th>
      </tr>
    </thead>
    <tfoot>
      <tr>
        <td
          colspan="4"
        >
          <div
            class="Footer"
          >
            <div
              class="Legend"
            >
              Rows 1 to 7 of 7
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
    <tbody>
      <tr
        class="Odd"
      >
        <td>
          Bonnie
        </td>
        <td>
          Cat
        </td>
        <td>
          2
        </td>
        <td>
          female
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Molly
        </td>
        <td>
          Cat
        </td>
        <td>
          15
        </td>
        <td>
          female
        </td>
      </tr>
      <tr
        class="Odd"
      >
        <td>
          Buddy
        </td>
        <td>
          Dog
        </td>
        <td>
          3
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Oscar
        </td>
        <td>
          Dog
        </td>
        <td>
          5
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class="Odd"
      >
        <td>
          Coco
        </td>
        <td>
          Parrot
        </td>
        <td>
          22
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          Max
        </td>
        <td>
          Turtle
        </td>
        <td>
          15
        </td>
        <td>
          male
        </td>
      </tr>
      <tr
        class="Odd"
      >
        <td>
          Jack
        </td>
        <td>
          Varan
        </td>
        <td>
          1
        </td>
        <td>
          male
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="Container"
  >
    <div
      class="Toolbar"
      style="top:0px"
    >
      <button
        class="Button"
      >
        ⇅
      </button>
      <button
        class="Button"
      >
        csv
      </button>
    </div>
  </div>
</div>
`;
